--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -771,9 +771,12 @@ span {
 
 /* HEIGHT */
 @media screen and (max-height: 650px) {
+  .header-content {
+    top: 55%;
+  }
   .discover-h2 {
     font-size: 3.7rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
   }
   .discover-p {
     font-size: 1.7rem;
