--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -771,6 +771,9 @@ span {
 
 /* HEIGHT */
 @media screen and (max-height: 650px) {
+  #discover {
+    height: 67vh;
+  }
   .header-content {
     top: 55%;
   }
