--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -772,7 +772,7 @@ span {
 /* HEIGHT */
 @media screen and (max-height: 650px) {
   #discover {
-    height: 67vh;
+    height: 70vh;
   }
   .header-content {
     top: 55%;
@@ -813,6 +813,9 @@ span {
   }
   .header-btn {
     font-size: 2.5rem;
+  }
+  .info-content {
+    padding: 4rem 0;
   }
 }
 
