--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -770,12 +770,15 @@ span {
 }
 
 /* HEIGHT */
+@media screen and (max-height: 600px) {
+  .header-content {
+    top: 55%;
+  }
+}
+
 @media screen and (max-height: 650px) {
   #discover {
     height: 70vh;
-  }
-  .header-content {
-    top: 55%;
   }
   .discover-h2 {
     font-size: 3.7rem;
