--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -999,6 +999,8 @@ footer {
   transform: scale(1.25);
 }
 
+/* GALLERY */
+
 /* RESPOSNIVE MENU */
 @media screen and (max-width: 1400px) {
   .image-h2 {
