--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -248,25 +248,25 @@ header {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/bgg1.jpg");
+    url("../img/image00002.jpeg");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/bgg1.jpg");
+    url("../img/image00002.jpeg");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/bgg1.jpg");
+    url("../img/image00002.jpeg");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/bgg1.jpg");
+    url("../img/image00002.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -383,15 +383,20 @@ header {
 }
 
 .image-1 {
-  background-image: url("https://source.unsplash.com/poI7DelFiVA");
+  background-image: url("../img/image00007.jpeg");
+  background-size: cover;
 }
 
 .image-2 {
-  background-image: url("https://source.unsplash.com/I79Pgmhmy5M");
+  background-image: url("../img/image00001.jpeg");
+  background-size: cover;
+  background-position: bottom;
 }
 
 .image-3 {
-  background-image: url("https://source.unsplash.com/NaKwyyh849o");
+  background-image: url("../img/image00003.jpeg");
+  background-size: cover;
+  background-position: bottom;
 }
 
 .boxes-content {
@@ -555,25 +560,25 @@ span {
       from(rgba(10, 10, 10, 0.8)),
       to(rgba(12, 12, 12, 0.8))
     ),
-    url("https://source.unsplash.com/1TkhHPOubu4");
+    url("../img/image00008.jpeg");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.8),
       rgba(12, 12, 12, 0.8)
     ),
-    url("https://source.unsplash.com/1TkhHPOubu4");
+    url("../img/image00008.jpeg");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.8),
       rgba(12, 12, 12, 0.8)
     ),
-    url("https://source.unsplash.com/1TkhHPOubu4");
+    url("../img/image00008.jpeg");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.8),
       rgba(12, 12, 12, 0.8)
     ),
-    url("https://source.unsplash.com/1TkhHPOubu4");
+    url("../img/image00008.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -622,7 +627,7 @@ span {
 /*HEADER */
 @media screen and (max-width: 600px) {
   .header-content {
-    top: 40%;
+    top: 45%;
   }
 }
 
