--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -620,11 +620,11 @@ span {
 /* RESPONSIVE */
 
 /*HEADER */
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .header-content {
     top: 45%;
   }
-}
+} */
 
 @media screen and (max-width: 500px) {
   .header-h1 {
