--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,7 +59,7 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   width: 35%;
 }
 
