--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -628,7 +628,7 @@ span {
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00005.jpeg");
+    url("../img/image00002.jpg");
   background-size: cover;
   background-position: center;
 }
